ubiquity (0.99.64) UNRELEASED; urgency=low

  * GTK frontend:
    - Use xscreensaver-command --deactivate, not --disable (closes: Malone
      #40095).
    - Hide "Set Time..." button if time-admin isn't present.
    - Recommend gnome-system-tools for time-admin.
  * KDE frontend:
    - Fix import of UbiquityUIBase (closes: Malone #40939).

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 23 Apr 2006 17:14:23 +0100

ubiquity (0.99.63) dapper; urgency=low

  * Additional base build-dependencies need to go in d-i/update-control to
    survive 'debian/rules update'. Add python-kde3-dev there.
  * Fix 'debian/rules build' to notice when kdepyuic fails.
  * Fix crash in keyboard selector if no keyboard is selected (closes:
    Malone #40658).
  * Remove ubiquity/frontend/liveinstaller.py on clean.

 -- Colin Watson <cjwatson@ubuntu.com>  Sun, 23 Apr 2006 13:12:31 +0100

ubiquity (0.99.62) dapper; urgency=low

  [ Jonathan Riddell ]
  * KDE Frontend:
    - Rename UbiquityUI to UbiquityUIBase
    - Get rid of KDialog usage, it caused crashes
    - Add Crystal icon from Ken Wimer
    - Compile .ui file during package creation
  * Automatic update of included source packages: base-installer
    1.42ubuntu10, silo-installer 1.03ubuntu2.

  [ Colin Watson ]
  * Support ESPRESSO_DEBUG as well as UBIQUITY_DEBUG for a while, to make it
    easier to concurrently triage bugs on the Dapper beta release and future
    daily builds.
  * Install a /usr/bin/espresso symlink to /usr/bin/ubiquity, for the same
    reason.
  * Update various copyright/licence notices.

 -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 22 Apr 2006 00:33:46 +0100

ubiquity (0.99.61) dapper; urgency=low

  * Rename from espresso to ubiquity, to better suggest an association with
    Ubuntu. Log output now written to /var/log/installer/syslog rather than
    using the package name.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 21 Apr 2006 12:50:27 +0100

espresso (0.99.60) dapper; urgency=low
